Bugs Fixed And Add Gateway Of Resource Module.